Add endpoint for email send, and some code clean up.
