# app.js
@@ -35,8 +35,6 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
 
   var port = process.env.PORT || 5000;
   app.listen(port);
-
-  if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello');
-  }
+  
+  console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello');
 });
